# chalk

./: Cargo.toml  README.md  api-deign.md  ideas.md
.devcontainer/: devcontainer.json
.github/workflows/: clippy.yml  rust.yml
afire_integration/: Cargo.toml
afire_integration/src/: lib.rs
chalk_cli/: Cargo.toml  build.rs
chalk_cli/src/: args.rs  error.rs  main.rs  misc.rs
chalk_cli/src/commands/: logs.rs  mod.rs  status.rs  system.rs  version.rs
chalk_cli/src/commands/app/: info.rs  mod.rs  start.rs  stop.rs
chalk_daemon/: Cargo.toml
chalk_daemon/src/: app.rs  config.rs  main.rs  misc.rs
chalk_daemon/src/api/: mod.rs
chalk_daemon/src/api/routes/: logs.rs  mod.rs  ping.rs  status.rs
chalk_daemon/src/api/routes/app/: action.rs  info.rs  mod.rs
chalk_daemon/src/project/: config.rs  mod.rs
cli/: Cargo.toml
daemon/: Cargo.toml
daemon/src/api/: mod.rs
daemon/src/api/routes/: mod.rs
src/: api-deign.md  app.rs  config.rs  ctrlc.rs  main.rs  misc.rs  project.rs
src/api/: mod.rs
src/api/routes/: app.rs  mod.rs  status.rs
src/api/routes/app/: action.rs  info.rs
src/project/: config.rs  mod.rs
