[package]
name = "chalk"
authors = ["Connor Slade <connor@connorcode.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
afire = "1.2.0"
colored = "2.0.0"
directories = "4.0.1"
nonblock = "0.2.0"
parking_lot = "0.12.1"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
sys-info = "0.9.1"
toml = "0.5.9"
