[package]
name = "chalk"
authors = ["Connor Slade <connor@connorcode.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
clap = "3.2.17"
colored = "2.0.0"
crossterm = "0.25.0"
directories = "4.0.1"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
toml = "0.5.9"
ureq = "2.5.0"
url = "2.2.2"
