[package]
name = "chalk"
authors = ["Connor Slade <connor@connorcode.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = "4.1.6"
colored = "2.0.0"
crossterm = "0.26.0"
directories = "4.0.1"
lazy_static = "1.4.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
toml = "0.7.2"
ureq = "2.6.2"
url = "2.3.1"
