[package]
name = "chalk_daemon"
authors = ["Connor Slade <connor@connorcode.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
afire = "1.2.0"
base64 = "0.13.0"
chrono = "0.4.22"
colored = "2.0.0"
ctrlc = { version = "3.2.3", features = ["termination"] }
directories = "4.0.1"
flate2 = "1.0.24"
git2 = "0.15.0"
nix = "0.25.0"
nonblock = "0.2.0"
parking_lot = "0.12.1"
procinfo = "0.4.2"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
sys-info = "0.9.1"
toml = "0.5.9"
