[package]
authors = ["Connor Slade <connor@connorcode.com>"]
edition = "2021"
name = "chalk_daemon"
version = "0.1.0"

[dependencies]
afire = "2.0.0"
base64 = "0.21.0"
chrono = "0.4.23"
colored = "2.0.0"
ctrlc = {version = "3.2.5", features = ["termination"]}
directories = "4.0.1"
flate2 = "1.0.25"
git2 = "0.16.1"
nix = "0.26.2"
nonblock = "0.2.0"
parking_lot = "0.12.1"
procinfo = "0.4.2"
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
sys-info = "0.9.1"
toml = "0.7.2"
